--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
             <button id="firebasePull" class="btn btn-secondary btn-sm">⬇️ Pull</button>
             <button id="firebaseBackup" class="btn btn-success btn-sm">💾 Backup</button>
             <button id="firebaseSignOut" class="btn btn-danger btn-sm">Sign Out</button>
+            <button id="firebaseSmartMerge" class="btn btn-secondary btn-sm">🔄 Smart Merge</button>
         </div>
         <div class="checkbox-group" style="margin-top: 10px;">
             <label>
