--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                         <option value="R_50">Volatility 50 Index</option>
                         <option value="R_75">Volatility 75 Index</option>
                         <option value="R_100">Volatility 100 Index</option>
+                        <option value="R_10S">Volatility 10 (1s) Index</option>
+                        <option value="R_25S">Volatility 25 (1s) Index</option>
+                        <option value="R_50S">Volatility 50 (1s) Index</option>
                     </select>
                 </div>
                 <button id="connectBtn" class="btn btn-primary">Connect</button>
